fix: improve viewing for users with small screen widths (#238)
* Truncate text through CSS instead of JavaScript

* Use row/col layout on header, simplify layout CSS

* Simplify Header styling

* Simplifiy Header column gap

* Allow Header to size freely to a maximum width with padding

* Make general .container style from Header container style

* Add conditional column display classes for different screen widths

* Group Header elements into sub-rows for better section layout flow

* Move unused theme switch to right-hand side of menu:

    - make it easier to deal with the navigation links while the theme button is not being considered

* Abstract out page links map

* Add secondary navigation menu when mobile "more" menu item is clicked

* Make mobile navigation menu close after navigation

* Allow mobile "more" menu button to appear focused while menu is open

* Allow Header to shrink down to 320px across easily

* Minimize page overflows with wide pages on small screens

* Make TokenInputGroup by default thinner

* Place top nav in a fixed position

* Add soft transition shadow to header when page is scrolled:

    - to show that the head is floating "above" the rest of the content

* Make Pool greeting card action buttons not wrap into multiple lines

* Improve Pool greeting card action buttons column gap

* Add document background color

* Fix spelling error

* Fix: remove default mobile browser styling overrides for input buttons

* Allow mobile view ports to start zoomed out to 540px width

* Prevent zooming in when focusing on inputs:

    - opening the token picker (ie. focusing on the text input)
      would automatically zoom the viewport onto the text input
      and it was difficult to return to the previous zoom level

* Fix issue of layering background gradients (had visible white edges):

    - the body contained the background gradient,
      and the Header component also contained the

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,65 +5,62 @@
 @use '../../styles/font/size.scss' as font-size;
 @use 'sass:math';
 
-$underline-height: 1px;
-
 header,
 .header {
-  @include paddings.padding('y', 3);
-  @include paddings.padding('x', 4);
-  padding: 2rem 4rem;
-  box-sizing: border-box;
-  text-align: start;
   width: 100%;
+  height: 112px;
+  > .container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    background: fixed var(--bg);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0);
+    transition: box-shadow 0.25s;
+  }
+
+  &.scrolled > .container {
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  }
 }
 
 nav,
 .nav {
-  & {
-    gap: margins.size(2);
-    display: flex;
-    align-items: center;
+  &.row,
+  .row {
+    gap: margins.size(4);
   }
 
-  .logo {
-    padding: 0;
-    margin: 0;
-  }
-
-  & > a,
-  & > .link {
-    & {
-      font-size: 1rem;
-      gap: margins.size(2);
-      position: relative;
-      padding: 0.75rem 1rem;
-      margin-left: 1rem;
-      border: none;
-      font-weight: 300;
-      border: none;
-      border-radius: 0;
-      cursor: pointer;
-      text-decoration: none;
+  // set single row height without overflow
+  &.row,
+  .row {
+    height: 48px;
+    flex-flow: nowrap;
+    & > .col {
+      height: 100%;
+      overflow: hidden;
+      justify-content: center;
     }
+  }
 
-    & > img,
-    & > h1,
-    & > .h1 {
-      margin: 0;
-      font-size: 1.75rem;
-      color: white;
-      height: 48px;
-      display: flex;
-      align-items: center;
+  // allow logo to shrink faster than other columns
+  .col:has(> .more-button) {
+    flex-shrink: 0;
+  }
 
-      img {
-        height: 48px;
-        width: auto;
-      }
+  // style logo image
+  .logo {
+    img {
+      display: block;
+      max-height: 48px;
+      width: 100%;
     }
   }
 
   button.user-profile {
+    width: 100%;
+    max-width: 10em;
     background-color: var(--profile-button-bg);
     color: var(--profile-button-text);
     display: flex;
@@ -91,5 +88,10 @@ nav,
     :active {
       background-color: hsl(200, 77%, 70%);
     }
+  }
+
+  .text-truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
