--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -1,7 +1,3 @@
-html {
-  background-color: white;
-}
-
 html,
 body,
 #root {
@@ -9,8 +5,11 @@ body,
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+}
+#root {
+  overflow: scroll;
 }
 
 main,
@@ -20,9 +19,14 @@ main,
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  width: 100%;
+  min-width: 100%;
 }
 
+html {
+  // use ~ average background color as background for HTML
+  // is seen in eg. macOS if user tries to scroll past the end of the document
+  background-color: #4a6980;
+}
 body {
   background: fixed var(--bg);
 }
