--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -4,6 +4,7 @@
 
 .page {
   margin: 2rem;
+  min-width: 460px;
 }
 
 .card {
