--- a/src/styles/theme/light.scss
+++ b/src/styles/theme/light.scss
@@ -24,14 +24,12 @@ $light-alt: core.$light-white;
 $link: transparent;
 $link-alt: core.$dark-gray;
 
-$bg: #fff
-  conic-gradient(
-    from 120deg at 50% 100%,
-    core.$bg-light 0deg,
-    rgba(core.$bg-light, 80%) 180deg,
-    rgba(core.$light-white, 80%) 360deg
-  );
-
+$bg: conic-gradient(
+  from 120deg at 50% 100%,
+  core.$bg-light 0deg,
+  mix(#fff, core.$bg-light, 20%) 180deg,
+  mix(#fff, core.$light-white, 20%) 360deg
+);
 // color + border color in default state, background + border color in hover state
 $ghost-button: core.$dark-white;
 
